<resources>
    <string name="app_name">Cash-a-lot</string>
    <string name="login">Log in</string>
    <string name="pass">Password</string>
    <string name="username">Username</string>
    <string name="registration">Registration</string>
    <string name="name_surname">Name Surname</string>
    <string name="phone">Mobile number</string>
    <string name="birthday">Birthday</string>
    <string name="signup">Sign up</string>
    <string name="test_balance">Balans 19 AZN</string>
    <string name="main">Main</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="info">Info</string>
    <string name="pay">Pay</string>
    <string name="getbonus">Get bonus</string>
    <string name="test_name_text">Test name text</string>
    <string name="test_amount_text">5</string>
    <string name="test_valute_text">AZN</string>
    <string name="edit">Edit</string>
    <string name="logout">Log out</string>
    <string name="lang">Language</string>
    <string name="email">Email</string>
    <string name="test_message_text">Hello, this message has been written at late night, and there is no any message actualy</string>
    <string name="test_place_text">Macdonalds :</string>
    <string name="test_datetime">18:45 , 5 April</string>
    <string name="describeproblem">Describe your problem</string>
    <string name="senffeedback">Send feedback</string>
</resources>
