<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.corcusoft.cash_a_lot.ui.activities.RegistrationActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_marginTop="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="120dp"
        android:layout_height="120dp" />

    <EditText
        android:id="@+id/edit_text_name_surname"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/draw_edit_text_back"
        android:paddingLeft="8dp"
        android:hint="@string/name_surname"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textStyle="italic"
        android:textSize="16sp"
         />
    <EditText
        android:id="@+id/edit_text_username"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="8dp"
        android:background="@drawable/draw_edit_text_back"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:hint="@string/username"
        android:lines="1"
        android:textStyle="italic"
        android:textSize="16sp"
         />
    <EditText
        android:id="@+id/edit_text_password"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="8dp"
        android:background="@drawable/draw_edit_text_back"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:hint="@string/pass"
        android:textStyle="italic"
        android:textSize="16sp"
        />
    <EditText
        android:id="@+id/edit_text_mobile_number"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="8dp"
        android:background="@drawable/draw_edit_text_back"
        android:hint="@string/phone"
        android:inputType="phone"
        android:imeOptions="actionNext"
        android:textStyle="italic"
        android:textSize="16sp"
         />
    <RelativeLayout
        android:background="@drawable/draw_edit_text_back"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp">
        <EditText
            android:id="@+id/edit_text_birthdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/image_view_calendar"
            android:paddingLeft="8dp"
            android:hint="@string/birthday"
            android:inputType="none"
            android:imeOptions="actionDone"
            android:lines="1"
            android:textStyle="italic"
            />
        <ImageView
            android:id="@+id/image_view_calendar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_calendar"
            />
    </RelativeLayout>
    <Button
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/draw_login_button_back"
        android:onClick="registrate"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        />
</LinearLayout>
