<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_margin="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:id="@+id/place_image_view"
            android:layout_gravity="center_horizontal"
            android:layout_width="70dp"
            android:layout_height="70dp" />
        <TextView
            android:id="@+id/place_name_text_view"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_name_text"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            />
        <LinearLayout
            android:layout_marginTop="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:id="@+id/amount_text_view"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_amount_text"
                android:textSize="22sp"/>
            <TextView
                android:id="@+id/valute_text_view"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/test_valute_text"
                android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
