<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    app:cardCornerRadius="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="96dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/image_view_place"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_macdonalds_test_icon"
                />

            <TextView
                android:id="@+id/text_view_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:lines="3"
                android:text="@string/test_message_text"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:background="@color/colorTextGray"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_view_place"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/test_place_text"
                />
            <TextView
                android:id="@+id/text_view_date"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/black"
                android:text="@string/test_datetime"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>