<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.corcusoft.cash_a_lot.ui.activities.LoginActivity">



    <ImageView
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:layout_width="120dp"
        android:layout_height="120dp" />

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_marginBottom="8dp"
        android:layout_above="@+id/edit_text_pass"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:background="@drawable/draw_edit_text_back"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:hint="@string/username"
        android:lines="1"
        android:textStyle="italic"  />


    <EditText
        android:id="@+id/edit_text_pass"
        android:layout_marginBottom="24dp"
        android:layout_above="@+id/central_orientir"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:background="@drawable/draw_edit_text_back"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:lines="1"
        android:textStyle="italic"  />


    <View
        android:id="@+id/central_orientir"
        android:layout_centerInParent="true"
        android:layout_width="0.1dp"
        android:layout_height="0.1dp"
        android:background="@android:color/transparent"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_below="@+id/central_orientir"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/draw_login_button_back"
        android:onClick="login"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:text="@string/login"
        />

    <RelativeLayout
        android:id="@+id/fb_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignLeft="@+id/button_login"
        android:layout_alignStart="@+id/button_login"
        android:layout_below="@+id/button_login"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/draw_fb_login_back_color">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/fb_login_text"
            android:src="@drawable/fb_login_icon" />
        <TextView
            android:id="@+id/fb_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Log in via FB"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/fb_login"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/draw_registration_button_back"
        android:onClick="toRegistrate"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:text="@string/registration"
         />
</RelativeLayout>
