<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.corcusoft.cash_a_lot.ui.activities.MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/image_view_settings"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_setting"
                />
            <TextView
                android:id="@+id/text_view_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:text="@string/test_balance"
                android:textStyle="bold"
                android:textSize="16sp"
                />
            <FrameLayout
                android:layout_marginRight="8dp"
                android:layout_alignParentRight="true"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                >
                <ImageView
                    android:id="@+id/image_view_notification"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_notification_cashalot"
                    />
                <TextView
                    android:id="@+id/text_view_notification_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:background="@drawable/draw_text_view_notification_count_background"
                    android:textSize="10sp"
                    android:text="3"
                    android:textColor="@android:color/white"
                    />
            </FrameLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/draw_linear_layout_menu_background"
            android:orientation="horizontal"
            android:weightSum="4" >

            <TextView
                android:id="@+id/text_view_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="@drawable/draw_text_view_selected_background"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/main"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView

                android:id="@+id/text_view_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:gravity="center"
                android:text="@string/history"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/text_view_Profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="15sp"
                />


            <TextView
                android:id="@+id/text_view_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/info"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/container_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </RelativeLayout>


</LinearLayout>
