<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_marginTop="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/ic_test_profile_photo"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_width="100dp"
                android:layout_height="100dp" />
            <LinearLayout
                android:layout_marginRight="8dp"
                android:layout_marginLeft="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/text_view_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_surname"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/text_view_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/edit_text_name"
                        android:layout_weight="0.2"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginRight="8dp"
                        android:paddingLeft="8dp"
                        android:background="@drawable/draw_edit_text_profile_back"
                        android:text="@string/name_surname"
                        />
                    <Button
                        android:id="@+id/button_edit_name"
                        android:layout_weight="0.8"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:textAllCaps="false"
                        android:text="@string/edit"
                        />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/edit_text_pass"
                        android:layout_weight="0.2"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginRight="8dp"
                        android:paddingLeft="8dp"
                        android:background="@drawable/draw_edit_text_profile_back"
                        android:inputType="textPassword"
                        android:text="@string/test_name_text"
                        />
                    <Button
                        android:id="@+id/button_edit_pass"
                        android:layout_weight="0.8"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:textAllCaps="false"
                        android:text="@string/edit"
                        />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/edit_text_username"
                        android:layout_weight="0.2"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginRight="8dp"
                        android:paddingLeft="8dp"
                        android:background="@drawable/draw_edit_text_profile_back"
                        android:text="@string/username"
                        />
                    <Button
                        android:id="@+id/button_edit_username"
                        android:layout_weight="0.8"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:textAllCaps="false"
                        android:text="@string/edit"
                        />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/edit_text_email"
                        android:layout_weight="0.2"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginRight="8dp"
                        android:paddingLeft="8dp"
                        android:background="@drawable/draw_edit_text_profile_back"
                        android:text="@string/email"
                        />
                    <Button
                        android:id="@+id/button_edit_mail"
                        android:layout_weight="0.8"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:textAllCaps="false"
                        android:text="@string/edit"
                        />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/edit_text_language"
                        android:layout_weight="0.2"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginRight="8dp"
                        android:paddingLeft="8dp"
                        android:background="@drawable/draw_edit_text_profile_back"
                        android:text="@string/lang"
                        />
                    <Button
                        android:id="@+id/button_edit_language"
                        android:layout_weight="0.8"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:textAllCaps="false"
                        android:text="@string/edit"
                        />
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_marginTop="18dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/draw_log_out_button_back"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_logout_icon"
                />
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </RelativeLayout>

    </LinearLayout>
</ScrollView>